--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="main">#f8bab1</color>
+    <color name="mainLighter">#fce3e0</color>
+    <color name="mainDarker">#f27c6b</color>
+    <color name="white">#FFFFFF</color>
+
+
 </resources>
