new update firebase storage

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,4 +27,11 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="100dp"
         android:text="Stop Playing" />
+
+    <Button
+        android:id="@+id/btnUpload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="100dp"
+        android:text="Upload Recording" />
 </LinearLayout>
