--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,14 @@
         android:layout_marginTop="120dp"
         android:text="Take me to My Post"
         android:onClick="make_recording"/>
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="153dp"
+        android:layout_marginTop="98dp"
+        android:onClick="startButton"
+        android:text="Start Recording"/>
 
     <TextView
         android:id="@+id/textView"
