--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/main">
+
     <Button
         android:id="@+id/btnRecord"
         android:layout_width="wrap_content"
@@ -14,26 +16,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="100dp"
-        android:text="Stop Recording" />
+        android:text="Stop Recording"
+        android:visibility="gone"/>
     <Button
         android:id="@+id/btnPlay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="100dp"
-        android:text="Play Recording" />
+        android:text="Play Recording"
+        android:visibility="gone"/>
     <Button
         android:id="@+id/btnStopPlay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="100dp"
-        android:text="Stop Playing" />
+        android:text="Stop Playing"
+        android:visibility="gone"/>
 
     <Button
         android:id="@+id/btnUpload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="100dp"
-        android:text="Upload Recording" />
+        android:text="Upload Recording"
+        android:visibility="gone"/>
 
 
 </LinearLayout>
