--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/main">
     <Button
         android:id="@+id/relocate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="120dp"
-        android:text="Take me to My Post"
-        android:onClick="make_recording"/>
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="153dp"
-        android:layout_marginTop="98dp"
-        android:onClick="startButton"
-        android:text="Start Recording"/>
+        android:layout_gravity="center_horizontal"
+        android:text="+"
+        android:onClick="make_recording"
+        android:textStyle="bold"
+        android:textSize="60dp"
+        android:backgroundTint="@color/main"
+        android:layout_marginTop="400dp"
+        android:layout_marginBottom="100dp"
+        android:textColor="@color/white"/>
 
     <TextView
         android:id="@+id/textView"
