--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -10,28 +10,21 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="100dp"
         android:layout_marginTop="120dp"
-        android:text="Start Recording" />
-    <Button
-        android:id="@+id/btnStop"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:text="Stop Recording"
-        android:visibility="gone"/>
+        android:text="Start Recording"
+        android:background="@color/white"
+        android:textColor="@color/mainDarker"
+        android:textStyle="bold"/>
+
     <Button
         android:id="@+id/btnPlay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="100dp"
         android:text="Play Recording"
-        android:visibility="gone"/>
-    <Button
-        android:id="@+id/btnStopPlay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:text="Stop Playing"
-        android:visibility="gone"/>
+        android:background="@color/white"
+        android:textColor="@color/mainDarker"
+        android:textStyle="bold"/>
+
 
     <Button
         android:id="@+id/btnUpload"
@@ -39,11 +32,15 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="100dp"
         android:text="Upload Recording"
-        android:visibility="gone"/>
+        android:background="@color/white"
+        android:textColor="@color/mainDarker"
+        android:textStyle="bold"/>
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"/>
+
 
 </LinearLayout>
