--- a/app/src/main/res/layout/fragment_refresh_.xml
+++ b/app/src/main/res/layout/fragment_refresh_.xml
@@ -20,7 +20,7 @@
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
-    <ImageView
+    <TextView
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
