--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,14 @@
         android:layout_marginTop="50dp"
         android:layout_marginBottom="100dp"
         android:textColor="@color/white"/>
+    <Button
+        android:id="@+id/test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="test"
+        android:onClick="test"
+        />
     <FrameLayout
 
         android:id="@+id/your_placeholder"
