--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,14 @@
         android:layout_marginTop="50dp"
         android:layout_marginBottom="100dp"
         android:textColor="@color/white"/>
+    
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swiperefresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+
+
     <FrameLayout
 
         android:id="@+id/your_placeholder"
@@ -23,6 +31,10 @@
         android:layout_height="450dp">
 
     </FrameLayout>
+
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+    
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
