--- a/app/src/main/res/layout/adapter.xml
+++ b/app/src/main/res/layout/adapter.xml
@@ -9,6 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:textSize="25sp"
         android:textAppearance="?attr/textAppearanceListItem"
         android:onClick="play_recording"/>
+
 </LinearLayout>
