--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -8,33 +8,44 @@
         android:id="@+id/btnRecord"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="60dp"
         android:text="Start Recording"
         android:background="@color/white"
         android:textColor="@color/mainDarker"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:textSize="40dp"
+        android:padding="30dp"/>
 
     <Button
         android:id="@+id/btnPlay"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:text="Play Recording"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:background="@color/white"
+        android:padding="30dp"
+        android:text="Play Recording"
         android:textColor="@color/mainDarker"
-        android:textStyle="bold"/>
+        android:textSize="40dp"
+        android:textStyle="bold" />
 
 
     <Button
         android:id="@+id/btnUpload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:text="Upload Recording"
         android:background="@color/white"
         android:textColor="@color/mainDarker"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:textSize="40dp"
+        android:layout_marginTop="30dp"
+        android:padding="30dp"/>
 
     <TextView
         android:id="@+id/textView"
