--- a/app/src/main/res/layout/activity_sign__up.xml
+++ b/app/src/main/res/layout/activity_sign__up.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:gravity="center_vertical"
     android:orientation="vertical"
-    android:padding="16dp"
     tools:context=".Sign_Up"
     android:background="@color/main">
 
@@ -14,17 +13,18 @@
         android:layout_width="400dp"
         android:layout_height="350dp"
         android:layout_marginBottom="200dp"
-        android:layout_marginTop="-150dp"
+        android:layout_marginTop="-170dp"
         android:layout_gravity="center_horizontal" />
 
     <EditText
         android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-200dp"
+        android:layout_marginTop="-250dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
-        android:hint="Email" />
+        android:hint="Email"
+        android:textSize="30sp"/>
 
     <EditText
         android:id="@+id/password"
@@ -33,7 +33,8 @@
         android:textColor="@color/white"
         android:hint="Password"
         android:textColorHint="@color/white"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:textSize="30sp"/>
 
     <CheckBox android:id="@+id/checkbox"
         android:layout_width="wrap_content"
@@ -41,7 +42,8 @@
         android:text="Show Password"
         android:onClick="show_password"
         android:textColor="@color/white"
-        android:buttonTint="@color/white"/>
+        android:buttonTint="@color/white"
+        android:textSize="30sp"/>
 
     <Button
         android:id="@+id/register"
@@ -50,21 +52,18 @@
         android:text="Register"
         android:textColor="@color/mainDarker"
         android:textStyle="bold"
-        android:backgroundTint="@color/white"/>
+        android:backgroundTint="@color/white"
+        android:textSize="30sp"
+        android:padding="20dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Already have an account? Sign in here"
-        android:layout_marginTop="10dp"
+        android:text="Have an account? Sign in here"
         android:textColor="@color/white"
-        android:onClick="login"/>
+        android:onClick="login"
+        android:textSize="27sp"/>
 
-<!--    <ProgressBar-->
-        android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone" />
 
 
 
