--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:gravity="center_vertical"
     android:orientation="vertical"
-    android:padding="16dp"
     tools:context=".Login"
     android:background="@color/main">
 
@@ -14,17 +13,18 @@
         android:layout_width="400dp"
         android:layout_height="350dp"
         android:layout_marginBottom="200dp"
-        android:layout_marginTop="-150dp"
+        android:layout_marginTop="-170dp"
         android:layout_gravity="center_horizontal" />
 
     <EditText
         android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-200dp"
+        android:layout_marginTop="-250dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
-        android:hint="Email" />
+        android:hint="Email"
+        android:textSize="30sp"/>
 
     <EditText
         android:id="@+id/password"
@@ -33,7 +33,8 @@
         android:textColor="@color/white"
         android:hint="Password"
         android:textColorHint="@color/white"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:textSize="30sp"/>
 
     <CheckBox android:id="@+id/checkbox"
         android:layout_width="wrap_content"
@@ -41,22 +42,26 @@
         android:text="Show Password"
         android:onClick="show_password"
         android:textColor="@color/white"
-        android:buttonTint="@color/white"/>
+        android:buttonTint="@color/white"
+        android:textSize="30sp"/>
 
     <Button
         android:id="@+id/login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/white"
         android:text="Login"
         android:textColor="@color/mainDarker"
-        android:textStyle="bold"
-        android:backgroundTint="@color/white"/>
+        android:textSize="30sp"
+        android:padding="20dp"
+        android:textStyle="bold" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="No account yet? Create one"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
+        android:textSize="30sp"
         android:textColor="@color/white"
         android:onClick="sign_up"/>
 
